syntax = "proto3";

package pb;

option go_package = "github.com/paweldyl/blog-backend/pb";

message Post {
    string id = 1;
    string title = 2;
    string short_desc = 3;
    string description = 4;
    string user_id = 5;
}